--- a/.github/workflows/forward-v4-workflow.yml
+++ b/.github/workflows/forward-v4-workflow.yml
@@ -46,21 +46,21 @@ jobs:
         fi
         if [ -z "$LAST_CURSOR" ]; then
           echo "FIRST TIME RUNNING AUDIT LOG POLL"
-          npm start -- --token ${{secrets.AUDIT_LOG_TOKEN}} --org ${{secrets.ORG_NAME}} --file 'audit-log-output.json'
+        #  npm start -- --token ${{secrets.AUDIT_LOG_TOKEN}} --org ${{secrets.ORG_NAME}} --file 'audit-log-output.json'
         else
           echo "RUNNING AUDIT LOG POLL FROM $LAST_CURSOR"
-          npm start -- --token ${{secrets.AUDIT_LOG_TOKEN}} --org ${{secrets.ORG_NAME}} --cursor $LAST_CURSOR --file 'audit-log-output.json'
+        #  npm start -- --token ${{secrets.AUDIT_LOG_TOKEN}} --org ${{secrets.ORG_NAME}} --cursor $LAST_CURSOR --file 'audit-log-output.json'
         fi
-        curl -X POST -H "Content-Type: application/json" -d @audit-log-output.json ${{secrets.WEBHOOK_URL}}
+        #curl -X POST -H "Content-Type: application/json" -d @audit-log-output.json ${{secrets.WEBHOOK_URL}}
         curl -X POST -H ${{secrets.WEBHOOK_URL}} "Content-Type: application/json" -d '{"text":"Webhook test"}'
 
     # Commit the cursor back to source
-    - name: Commit cursor
-      uses: EndBug/add-and-commit@v5
-      with:
-        author_name: Audit Log Integration
-        author_email: ${{ secrets.COMMITTER_EMAIL }}
-        message: "Updating cursor for audit log"
-        add: ".last-cursor-update --force"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #- name: Commit cursor
+    #  uses: EndBug/add-and-commit@v5
+    #  with:
+    #    author_name: Audit Log Integration
+    #    author_email: ${{ secrets.COMMITTER_EMAIL }}
+    #    message: "Updating cursor for audit log"
+    #    add: ".last-cursor-update --force"
+    #  env:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
