--- a/.github/workflows/forward-v4-workflow.yml
+++ b/.github/workflows/forward-v4-workflow.yml
@@ -52,7 +52,7 @@ jobs:
         #  npm start -- --token ${{secrets.AUDIT_LOG_TOKEN}} --org ${{secrets.ORG_NAME}} --cursor $LAST_CURSOR --file 'audit-log-output.json'
         fi
         #curl -X POST -H "Content-Type: application/json" -d @audit-log-output.json ${{secrets.WEBHOOK_URL}}
-        curl -X POST -H ${{secrets.WEBHOOK_URL}} "Content-Type: application/json" -d '{"text":"Webhook test"}'
+        curl -X POST ${{secrets.WEBHOOK_URL}} -H "Content-Type: application/json" -d '{"text":"Webhook test"}'
 
     # Commit the cursor back to source
     #- name: Commit cursor
