--- a/.github/workflows/forward-v4-workflow.yml
+++ b/.github/workflows/forward-v4-workflow.yml
@@ -53,7 +53,7 @@ jobs:
         fi
         #curl -X POST -H "Content-Type: application/json" -d @audit-log-output.json ${{secrets.WEBHOOK_URL}}
         curl -X POST -H "Content-Type: application/json" -d '{"text":"Webhook test"}' ${{secrets.WEBHOOK_URL}}
-        curl -X POST ${{secrets.WEBHOOK_URL}} -H "Content-Type: application/json" -d '{"text":"Webhook re:test"}'
+        curl -X POST ${{secrets.WEBHOOK_URL}} -H "Content-Type: application/json" -d '{"text":"ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ！"}'
 
     # Commit the cursor back to source
     #- name: Commit cursor
