--- a/.github/workflows/forward-v4-workflow.yml
+++ b/.github/workflows/forward-v4-workflow.yml
@@ -57,7 +57,7 @@ jobs:
         curl -X POST -H "Content-Type: application/json" -d @test.json ${{secrets.WEBHOOK_URL}}
         # ただのtextであれば受けれることのp確認のみ。
         # azure blob strage では逆に（ファイルではないから）エラーとなる可能性あり。
-        curl -X POST -H "Content-Type: application/json" -d '{"text":"Webhook test"}' ${{secrets.WEBHOOK_URL}}
+        #curl -X POST -H "Content-Type: application/json" -d '{"text":"Webhook test"}' ${{secrets.WEBHOOK_URL}}
 
     # Commit the cursor back to source
     - name: Commit cursor
