--- a/.github/workflows/forward-v4-workflow.yml
+++ b/.github/workflows/forward-v4-workflow.yml
@@ -54,7 +54,8 @@ jobs:
 
         #curl -X POST -H "Content-Type: application/json" -d @audit-log-output.json ${{secrets.WEBHOOK_URL}}
         # 仮で出力する.json形式のファイル（Teamsではファイル形式がそもそも受けられないはず）
-        curl -X POST -H "Content-Type: application/json" -d @test.json ${{secrets.WEBHOOK_URL2}}
+        #curl -X POST -H "Content-Type: application/json" -d @test.json ${{secrets.WEBHOOK_URL2}}
+        curl -X POST -H "Content-Type: application/json" -d @test2.json ${{secrets.WEBHOOK_URL2}}
         # ただのtextであれば受けれることのp確認のみ。
         # azure blob strage では逆に（ファイルではないから）エラーとなる可能性あり。
         #curl -X POST -H "Content-Type: application/json" -d '{"text":"Webhook test"}' ${{secrets.WEBHOOK_URL}}
